<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/phone_number"
        style="@style/UserAccountEt"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:inputType="phone"
        android:drawableLeft="@drawable/phone_icon"
        android:hint="@string/phone_number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/code_et"
            style="@style/UserPwdEt"
            android:layout_width="0dp"
            android:inputType="number"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:paddingLeft="10dp"
            android:hint="@string/code"
            android:singleLine="true"
            android:textColorHint="@color/gray_line_bg" />

        <Button
            android:id="@+id/get_code_btn"
            style="@style/LoginBtnStyle"
            android:layout_width="0dp"
            android:background="@drawable/gray_button_bg"
            android:layout_marginLeft="10dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:textColor="@color/light_green"
            android:text="@string/get_code" />
    </LinearLayout>

    <Button
        android:id="@+id/find_pwd_btn"
        style="@style/LoginBtnStyle"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:text="@string/find_pwd" />

</LinearLayout>